--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="Pasha">
             <h3 class="hdng1">Павловния</h3>
             <p><img src="1.jpg" class="imgP1"></p>
-            <p class="description1">Павловния (лат.paulownia) — род вечнозеленых и полувечнозеленых листопадных деревьев, включающий в себя около 10 разновидностей.
+            <p class="description1"><b>П</b>авловния (лат.paulownia) — род вечнозеленых и полувечнозеленых листопадных деревьев, включающий в себя около 10 разновидностей.
             Родина большинства из них — Китай,где Павловния считается одним из национальных растений.
             Постепенно Павловнии стали выращивать и в других частях Восточной Азии: Японии, Вьетнаме, Корее, Лаосе), затем — в Европе.</p>
         </div> 
@@ -24,7 +24,7 @@
         <div class="loh">
             <h3 class="hdng2">Лох</h3>
             <p><img src="2.jpg" class="imgP2"></p>
-            <p class="description2">Род Лох (Elaeagnus) всегда был самым крупным в семействе Лоховые, а в XXI веке его состав увеличился почти вдвое.
+            <p class="description2"><b>Р</b>од Лох (Elaeagnus) всегда был самым крупным в семействе Лоховые, а в XXI веке его состав увеличился почти вдвое.
                  Это произошло из-за разделения уже входивших в него видов и за счет новых, переведенных из других родов 
                  Ствол бывает прямостоячим и изогнутым, серая или буровато-красная гладкая кора с возрастом шелушится.</p>
         </div>
@@ -33,16 +33,27 @@
         <div class="stena">
             <h3 class="hdng1">Стеноглоттис</h3>
             <p><img src="3.jpg" class="imgP1"></p>
-            <p class="description1">В 1837 году Джону Линдли доставили неизвестное растение из Транскея. Выдающийся английский ботаник описал, поименовал новый род и включил его в семейство Орхидные.
+            <p class="description1"><b>В</b> 1837 году Джону Линдли доставили неизвестное растение из Транскея. Выдающийся английский ботаник описал, поименовал новый род и включил его в семейство Орхидные.
                 Название Стеноглоттис (Stenoglottis) состоит из двух греческих слов «stenos» и «glossa», в переводе — «узкий» и «язык». </p>
         </div>
-
+        <div class="table">
+            <div class="tr1">
+            <div class="td1"></div><div class="td2"></div>
+            </div>
+            <div class="tr2">
+                <div class="td3"></div><div class="td4"></div>
+            </div>
+        </div>
         <div class="Nymph">
             <h3 class="hdng2">Нимфея</h3>
             <p><img src="4.jpg" class="imgP2"></p>
-            <p class="description2">Род Нимфея относится к семейству Кувшинковые (Nymphaeaceae). Существует около 50 разновидностей Нимфей. Среди них есть космополиты, которые приживаются в пресных водоемах от Южной Америки до тундры:
+            <p class="description2"><b>Р</b>од Нимфея относится к семейству Кувшинковые (Nymphaeaceae). Существует около 50 разновидностей Нимфей. Среди них есть космополиты, которые приживаются в пресных водоемах от Южной Америки до тундры:
                  Нимфея четырехгранная (Nymphaea tetragona), Нимфея белая (Nymphaea alba), Нимфея белоснежная (Nymphaea candida).</p>
         </div>
     </div>
     </div>
+    <footer>
+        <p>Валерия Халюк</p>
+        <p>2021 г.</p>
+    </footer>
 </body>
